# VNA-Server

./: .env.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pytest.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: how-to-use.md  plans.md  review-1.md  review-2.md  ux-design.md
docs/ux-design/: KAAPANA-REFERENCE.md  VNA-UX-DESIGN-SPEC.md
plans/: IMPROVEMENT_PLAN.md
scripts/: backup.sh  init-db.sql  smoke-compose.sh  test_postgres_integration.py  wait-for-http.sh
test/: 20260402.md
tests/: __init__.py  conftest.py  test_dicom_sdk.py  test_e2e.py  test_main_server.py  test_vna_main_sdk.py
vna-bids-sdk/: README.md  pyproject.toml  requirements.txt
vna-bids-sdk/bids_sdk/: __init__.py  cli.py  client.py  client_async.py  exceptions.py  models.py
vna-bids-sdk/docs/: DESIGN.md
vna-bids-sdk/tests/: test_cli.py  test_client.py
vna-bids-server/: Dockerfile  README.md  alembic.ini  docker-compose.orthanc.yml  docker-compose.vna.yml  docker-compose.yml  pyproject.toml  requirements.txt
vna-bids-server/bids_server/: config.py  main.py
vna-bids-server/bids_server/api/: annotations.py  labels.py  modalities.py  objects.py  query.py  rebuild.py  replication.py  responses.py  sessions.py  store.py  subjects.py  tasks.py  validation.py  verify.py  webhooks.py
vna-bids-server/bids_server/core/: bids_validator.py  hash.py  storage.py  stream.py  upload.py  webhook_manager.py
vna-bids-server/bids_server/db/: session.py
vna-bids-server/config/: modalities.yaml  settings.env
vna-bids-server/docs/: DESIGN.md  PITCH.md  PLAN.md  PROGRESS.md
vna-bids-server/scripts/: start.sh
vna-bids-server/tests/: conftest.py  test_api.py  test_auth.py  test_core.py  test_health.py  test_tasks.py
vna-common/: pyproject.toml
vna-common/vna_common/: __init__.py  responses.py
vna-common/vna_common/middleware/: __init__.py  api_version.py  logging.py  rate_limit.py  request_id.py
vna-dicom-sdk/: README.md  pyproject.toml  requirements.txt
vna-dicom-sdk/dicom_sdk/: __init__.py  async_client.py  cli.py  client.py  exceptions.py  models.py  sync_watcher.py
vna-dicom-sdk/docs/: DESIGN.md
vna-dicom-sdk/tests/: test_cli.py  test_client.py  test_sync_watcher.py
vna-dicom-server/: Dockerfile  README.md  docker-compose.yml
vna-dicom-server/docs/: CONFIG.md  DICOMWEB.md  orthanc-config.md
vna-main-sdk/: README.md  pyproject.toml  requirements.txt
vna-main-sdk/docs/: DESIGN.md
vna-main-sdk/tests/: __init__.py  test_cli.py  test_client.py
vna-main-sdk/vna_main_sdk/: __init__.py  cli.py  client.py  client_async.py  models.py
vna-main-server/: Dockerfile  alembic.ini  requirements-dev.txt  requirements.txt  vna_main.db
vna-main-server/alembic/: env.py
vna-main-server/docs/: DESIGN.md
vna-main-server/scripts/: start.sh
vna-main-server/tests/: conftest.py  test_audit.py  test_auth.py  test_health.py  test_labels.py  test_monitoring.py  test_patients.py  test_projects.py  test_query.py  test_resources.py  test_sync.py  test_treatments.py  test_versions.py
vna-main-server/vna_main/: main.py
vna-ux/: Dockerfile  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
vna-ux/docker/: nginx.conf
vna-ux/src/: App.tsx
(+70 files in other folders)
