[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bids-sdk"
version = "0.1.0"
description = "Python SDK for BIDS Server (BIDSweb API)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "BIDS Server SDK Contributors"},
]
keywords = ["bids", "neuroimaging", "medical-imaging", "sdk", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20.0",
]

[project.scripts]
bids-cli = "bids_sdk.cli:cli"

[project.urls]
Homepage = "https://github.com/bids-server/bids-sdk"
Documentation = "https://github.com/bids-server/bids-sdk#readme"
Repository = "https://github.com/bids-server/bids-sdk"

[tool.setuptools.packages.find]
include = ["bids_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
