[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vna-common"
version = "0.1.0"
description = "Shared middleware and utilities for VNA services"
requires-python = ">=3.10"
dependencies = [
    "starlette>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
